--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -3864,7 +3864,7 @@ We now come to the actual proof of Lemma \ref{lem.BK}. For the whole Section
 columns}
 
 Let $Z$ be a finite convex subset of $\mathbb{N}_{+}^{2}$. We shall keep $Z$
-fix for the rest of Section \ref{sect.proof}. Let $\mathbf{R}$ denote the set
+fixed for the rest of Section \ref{sect.proof}. Let $\mathbf{R}$ denote the set
 of all 12-rpps of shape $Z$.
 
 A \textit{12-table} will mean a map $T:Z\rightarrow\left\{  1,2\right\}  $
@@ -4544,7 +4544,7 @@ qed.}.
 
 \subsection{The $\operatorname*{flip}$ map on benign 12-tables}
 
-We can define a map $\operatorname*{flip}:\mathbf{S}\rightarrow\mathbf{S}$ as
+We define a map $\operatorname*{flip}:\mathbf{S}\rightarrow\mathbf{S}$ as
 follows: Let $T\in\mathbf{S}$; that is, let $T$ be a benign 12-table. For
 every $k\in\mathbb{N}_{+}$ for which the $k$-th column of $T$ is nonempty, we
 transform the $k$-th column of $T$ as follows:
